# adfoundry

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.server  README.md  chats.md  compose.yaml  main.py  pyproject.toml  todos.md
.claude/agents/: react-shadcn-zustand-expert.md
adfoundry/: __init__.py  browser.py  cli.py  dashboard.py  dialogue.py  events.py  fixtures.py  html_generation.py  image_assets.py  llm.py  logging_config.py  models.py  qa.py  server.py  settings.py  workflow.py
docs/: ADFOUNDRY_TECHNICAL_BRIEFING.md
tests/: test_browser.py  test_events.py  test_image_assets.py  test_qa.py  test_server.py  test_settings.py  test_streaming.py  test_workflow.py
web/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: app-shell.tsx  status-badge.tsx
web/src/components/ui/: avatar.tsx  badge.tsx  progress.tsx
web/src/features/home/: new-campaign-form.tsx
web/src/features/run/: agent-dialogue.tsx  build-timeline.tsx  preview-pane.tsx  qa-scorecard.tsx  revise-panel.tsx  run-header.tsx
web/src/hooks/: use-elapsed.ts  use-event-stream.ts
web/src/lib/: api.ts  credentials.ts  format.ts
web/src/pages/: home-page.tsx  run-page.tsx  setup-page.tsx
web/src/store/: run-store.ts  runs-list-store.ts
web/src/types/: api.ts  events.ts
